2005-09-27  Stepan Kasal  <kasal@ucw.cz>

	* doc/grep.1: Fix a typo.

2005-08-24  Charles Levert  <charles_levert@gna.org>

	* src/grep.c (print_line_middle): In case of an empty match,
	  make minimal progress and continue instead of aborting process
	  of the remainder of the line, in case there's still an upcoming
	  non-empty match.
	* tests/foad1.sh: Add two tests for this.
	* doc/grep.texi, doc/grep.1: Document this behavior, since
	  --only-matching and --color are GNU extensions which are
	  otherwise unspecified by POSIX or other standards.

2005-07-26  Charles Levert  <charles_levert@gna.org>

	* tests/pcre.sh: New file.  Add test 1.
	* tests/Makefile.am: Add pcre.sh to TESTS.

2005-07-07  Charles Levert  <charles_levert@gna.org>

	* src/grep.c: Remove all xm capability code.

2005-07-05  Charles Levert  <charles_levert@gna.org>

	* doc/grep.texi: Add missing green color in GREP_COLORS description.
	* doc/grep.1: Fix typo and reorganize GREP_COLORS documentation.

	* src/kwset.c (DEPTH_SIZE): New macro to anticipate
	  architectures/compilers where CHAR_BIT is not 8 (we assume it
	  won't be less than 4, which would be non-standard and unlikely).
	  Checked to hold for CHAR_BIT up to 1023 (and maybe more)!
	* src/kwset.c (kwsincr): Use DEPTH_SIZE in two array declarations.

	* src/kwset.c (kwsincr): When a second obstack_alloc() call fails,
	  free what the first one successfully allocated by popping it
	  off the top of the obstack, before returning in error, just
	  to keep things clean.
	* src/kwset.c (kwsprep): Verify return value of obstack_alloc()
	  and return a memory exhausted error if so.  This function had
	  a prototype to return such errors, but never did.

2005-07-04  Charles Levert  <charles_levert@gna.org>

	* src/kwset.c: Readability changes.
	  Replace uses of 0 for pointer values by NULL.
	  Generalize use of existing U() macro to whole file.

	* src/kwset.c (kwsprep): Use memset() and memcpy() when appropriate.
